# awsl

./: Cargo.toml  hello_world.awsl
src/: exec.rs  functions.rs  kernel.rs  main.rs  structures.rs  variables.rs
