[package]
name = "kernel"
version = "0.1.0"
authors = ["moelife-coder <61054382+moelife-coder@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.7"
base64 = "0.11.0"
